--- a/site/wp-content/themes/catapult/sass/_catapult-floater.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-floater.scss
@@ -19,7 +19,7 @@
 	.social-button {
     position: relative;
 		display: block;
-  	width: 32px;
+  	width: 33px;
 
 		span {
 			@include transition(0.3s);
@@ -28,8 +28,8 @@
   		left: 0;
   		z-index: -1;
   		display: block;
-  		width: 32px;
-  		height: 28px; /* 32px - 4px padding */
+  		width: 33px;
+  		height: 33px;
   		overflow: hidden;
   		border-radius: 16px 0 0 16px;
       padding-top: 4px;
@@ -54,13 +54,13 @@
 		}
     
     &.contact-button--twitter .hover {
-      width: 95px;
+      width: 110px;
     }
     &.contact-button--facebook .hover {
-      width: 65px;
+      width: 85px;
     }
     &.contact-button--rss .hover {
-      width: 35px;
+      width: 80px;
     }
 	}
 }
