--- a/site/wp-content/themes/catapult/sass/_catapult-locations.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-locations.scss
@@ -38,12 +38,21 @@
   .map-callout-content {
     float: left;
     width: 55%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
   
   h2 {
     color: $orange;
     font-size: 2.1em;
     margin: 0 0 10px 0;
+  }
+  
+  h3 {
+    color: #333333;
+    font-size: 1.2em;
+    margin: 0;
   }
 
   p {
