--- a/site/wp-content/themes/catapult/sass/_catapult-footer.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-footer.scss
@@ -5,9 +5,15 @@ footer {
 	background: rgba(0,0,0,0.5);
 	@include innerShadow(0px, 7px, 7px, 0px, 0.5);
   
+  .contact-button {
+    width: 33px;
+    float: left;
+    text-indent: -10000px;
+  }
+  
   .footer-links {
     margin: 0;
-    padding: 20px 0;
+    padding: 29px 0 20px 0;
     
     li {
       list-style-type: none;
@@ -19,6 +25,10 @@ footer {
         text-decoration: none;
         font-size: 1.5em;
         letter-spacing: 1px;
+        
+        &:hover {
+          color: $orange;
+        }
       }
     }
   }
