--- a/site/wp-content/themes/catapult/sass/_catapult-locations.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-locations.scss
@@ -86,9 +86,15 @@
         
         a {
           text-decoration: none;
+          color: #FFFFFF;
           
-          &:hover {
-            color: white;
+          &:hover, 
+          &.active {
+            color: $orange;
+          }
+          
+          &.active {
+            text-shadow: -2px -2px 0px rgba(0,0,0,0.3);
           }
         }
       }
