--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -6,6 +6,7 @@
 @import "catapult-header";
 @import "catapult-intro";
 @import "catapult-keyofferings";
+@import "catapult-press";
 @import "catapult-casestudies";
 @import "catapult-team";
 @import "catapult-partners";
