--- a/site/wp-content/themes/catapult/css/thanks.css
+++ b/site/wp-content/themes/catapult/css/thanks.css
@@ -528,7 +528,7 @@ h1, h2, h3, h4, h5, p, label, input, textarea, li {
 
 input[type="text"], input[type="tel"], input[type="email"], input[type="number"], select {
   border: none;
-  padding: 6px 0 5px 5px;
+  padding: 6px 0 5px 15px;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 0.8em;
   color: black; }
@@ -547,6 +547,9 @@ h1 {
   font-size: 2.75em;
   text-align: center;
   font-weight: normal; }
+  @media only screen and (max-width: 320px) {
+    h1 {
+      font-size: 1.7em; } }
 
 h2 {
   font-size: 2.5em; }
@@ -571,6 +574,15 @@ hr {
   margin: 10px 0 0 0;
   padding: 0;
   background: url(../img/divider.png) top left repeat-x; }
+
+ul.nolist {
+  margin: 0;
+  padding: 0; }
+  ul.nolist li {
+    list-style-type: none;
+    float: left; }
+    ul.nolist li:last-of-type {
+      margin-right: 0; }
 
 .clicky-button {
   overflow: visible;
@@ -770,12 +782,12 @@ section {
   @media only screen and (max-width: 862px) {
     .contact-button {
       padding-top: 5px;
-      height: 29px;
+      height: 33px;
       font-size: 1.4em; } }
   @media only screen and (max-width: 693px) {
     .contact-button {
       padding-top: 7px;
-      height: 27px;
+      height: 33px;
       font-size: 1.1em; } }
   .contact-button.contact-button--small {
     font-size: 0.9em;
@@ -1311,7 +1323,7 @@ html.no-svg .header .logo {
   overflow: hidden;
   float: right;
   background: url(../img/homepage/divider-vert.png) top right no-repeat;
-  padding: 29px 0 0 0; }
+  padding: 25px 0 0 0; }
   @media only screen and (max-width: 720px) {
     .mainnav {
       padding-top: 16px; } }
@@ -1478,6 +1490,10 @@ footer {
       list-style-type: none;
       float: left;
       padding: 0 25px 0 0; }
+      @media only screen and (max-width: 320px) {
+        footer .footer-links li {
+          float: none;
+          padding-bottom: 10px; } }
       footer .footer-links li a {
         color: white;
         text-decoration: none;
