--- a/site/wp-content/themes/catapult/sass/_catapult-intro.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-intro.scss
@@ -53,6 +53,10 @@
   .slidesjs-pagination {
     padding: 0;
     overflow: hidden;
+    
+    @media only screen and (max-width: 320px) {
+      display: none;
+    }
   }
   
   .slidesjs-pagination .active {
