--- a/site/wp-content/themes/catapult/sass/_catapult-locations.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-locations.scss
@@ -66,27 +66,72 @@
 	
   #locations-map {
     height: 500px;
+
+    @media only screen and (max-width: 563px) {
+      height: 250px;
+    }
   }
   
   .map-footer {
     h2 {
       float: left;
+      @media only screen and (max-width: 1024px) {
+        font-size: 2em;
+      }
+
+      @media only screen and (max-width: 795px) {
+        float: none;
+        text-align: center;
+        margin-bottom: 0;
+      }
+
+      @media only screen and (max-width: 563px) {
+        font-size: 1.7em;
+      }
+
+      @media only screen and (max-width: 320px) {
+        font-size: 1em;
+      }
     }
     
     ul {
       margin: 0;
       padding: 0;
       float: right;
+
+      @media only screen and (max-width: 795px) {
+        float: none;
+        width: 500px;
+        margin: 0 auto;
+      }
+
+      @media only screen and (max-width: 320px) {
+        width: 100%;
+      }
       
       li {
         list-style-type: none;
         float: left;
         margin: 4px 0 0 20px;
         padding: 0;
+
+        &:first-of-type {
+          margin-left: 0;
+        }
+        
+        @media only screen and (max-width: 795px) {
+          h2 {
+            margin: 0;
+          }
+        }
+
+        @media only screen and (max-width: 320px) {
+          margin-left: 10px;
+        }
         
         a {
           text-decoration: none;
-          color: #FFFFFF;
+          color: $lightGreyFont;
           
           &:hover, 
           &.active {
